Four tiles and css

--- a/Content/Exceptional Transport Application.htm
+++ b/Content/Exceptional Transport Application.htm
@@ -4,19 +4,16 @@
     </head>
     <body>
         <h1>Exceptional Transport Application</h1>
-        <p>This is a sample landing topic. </p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>
-                <MadCap:dropDownHotspot>Drop-down text.</MadCap:dropDownHotspot>
-            </MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>Lorem ipsum dolor sit amet, ut utamur lobortis mea, ex mazim partem verterem usu, ad nullam fierent vix. Sit an facete aeterno, eu ferri putant est, nec suas justo laoreet id. Nec ut unum pertinax. Mei ut ocurreret deseruisse. Cu per utamur prodesset, solet nostro adipiscing usu cu.</p>
-        <p>Verear perfecto consequuntur nam eu, ei malis efficiendi dissentiunt his. Sed et ferri electram prodesset, nec in malis gloriatur. Quo no dico saperet explicari, no mea unum electram. Tacimates vituperatoribus id eos, doctus fabellas tractatos ea cum. Pro soluta everti urbanitas ad, simul laoreet interesset an est, id est exerci nominati. Id habeo clita complectitur pri, esse primis aeterno at cum.</p>
-        <p>Iusto altera salutandi et ius. Nam an atqui semper mediocrem, sed eu eius legimus principes. Qui consul eligendi assueverit ei, eu veri theophrastus mea. Ut vis meis corpora accusata, eros elitr nihil pri te, ei mea doming constituto. Ut agam duis justo vel. Te nulla evertitur eos, ne ius paulo partiendo erroribus. Moderatius honestatis signiferumque an est.</p>
-        <p>Ei mel percipit corrumpit, te mei dicam postea. At quo rebum alterum vocibus, scripta officiis fabellas ex sed, ei velit instructior theophrastus mea. Mel modus aeque scaevola an. Ea sit ludus aliquam appareat, possim euismod philosophia nam ex, ad nonumy denique sea. Wisi mutat cu vel, postea noluisse quaerendum ei pri, tota alienum ponderum nam ne. Vero omnis has te, mei in copiosae vulputate.</p>
-        <p>Cum no tamquam impedit, nam ut veri ubique utroque. In admodum persecuti vim. Enim fugit accusata ei nec. Ei vix reque alterum saperet, in indoctum definitionem pri, quis audiam alterum duo ea.</p>
+        <p>Before exceptional transport takes place and once the consignment is qualified as exceptional consignment the consignee sends to railway undertaking an order for an exceptional consignment permit with conditions of carriage. The railway undertaking obtains a permit with transport conditions from the infrastructure manager. <br />In international transports the permit is shared with all other participating railway undertakings.<br /></p>
+        <p>Communication between these  entities is carried out in a standardized form, which derives from the rules set in the UIC&#160;document IRS 50502 "Exceptional Consignments - Regulations concerning the preparation and management of conceptional consignments". These rules are binding for all UIC&#160;railway undertakings involved in the international transports of exceptional consignments.</p>
+        <p>Appendix B of the UIC&#160;IRS 50502 document contains a template of a form of written communication with 38 points. These points can be grouped into the main three elements of  the exceptional transports:</p>
+        <ul>
+            <li>goods  data - which are to be transported,</li>
+            <li>wagon data - which is suitable for the transport of the good,</li>
+            <li>path data - which is ordered by the consignee, and for which infrastructure manager sets and approves  conditions of carriage.</li>
+        </ul>
+        <p>Infrastructure manager examines the carriage conditions for the set of the wagon with cargo on the paths within his railways network. Practice shows that  in the application forms usually  points 1-32 are filled by railway undertakings. In reply, the infrastructure manager sends the permit with some of these 32 points. In Appendix B of the UIC&#160;IRS 50502 there is guidance which points are obligatory for each entity in the approval process.</p>
+        <p>International written communication is conducted in one of the three official UIC&#160;official languages:&#160;German, French or English. In urgent cases it is accepted to send an approval applications in other non-official language. In the countries where the official UIC&#160;languages are not national languages, it is the responsibility of the railway undertaking to translate the content of the application into national language.</p>
+        <p>This project describes each one of the free application elements with focus on the application codes which describe goods, wagon and path data. </p>
     </body>
 </html>
