--- a/Content/Goods Data.htm
+++ b/Content/Goods Data.htm
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head><title>Goods Compatibility</title>
+    <head><title>Goods Data</title><link></link>
     </head>
     <body>
         <h1>Goods Data</h1>
