--- a/Content/Path Data.htm
+++ b/Content/Path Data.htm
@@ -1,106 +1,100 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head><title>Path Compatibility</title>
+    <head><title>Path Data</title>
     </head>
     <body>
         <h1>Path Data</h1>
-        <p>Delete this text and replace it with your own content.</p>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#20a<MadCap:dropDownHotspot>Consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#20a <MadCap:dropDownHotspot>Consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>The consignor is the contractual party of the  transport contract. Add name and address of a consignor. When consignor data is unknown, declare consignor in descriptive way referring to data in a waybill.<br />For example: Maersk,  in accordance with CIM. </p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#20b <MadCap:dropDownHotspot>RU executing the carriage*</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>In national transports usually one railway undertaking runs the exceptional transport. In international transports more railway undertakings are involved. Occasionally two railway undertakings run train on one railway network. Add country code in the front of the name of operating railway undertakings.<br />For example: (AT) Rail Cargo Austria, (DE) DB&#160;Cargo.<br /></p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#21 <MadCap:dropDownHotspot>Dispatch station*.</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>Is the station where cargo loaded on the wagon starts it's journey. Indicate station's name, station DIUM code and infrastructure manager's code or county code. When the first mile starts on the private siding add the name of the siding. For larger cities make sure to name exact station's operational name, since there may be a number of station in the city.<br />For example: Villach Sued CCT [81-01990-1](OeBB Infra) <br /></p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#22 <MadCap:dropDownHotspot>Destination station*</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>Is the station where cargo is off loaded an handed over to consinee. Indicate station's name, station DIUM code and infrastructure manager's code or country code. When the last mile starts is run on the private siding add the name of the siding. For larger cities make sure to name exact station's operational name, since there may be a number of station in the city.<br />For example: Duisburg Hafen WRS [80- 22665- 4](DB InfraGO).</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#23a <MadCap:dropDownHotspot>Route requested by consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>For example: _____. </p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#24 <MadCap:dropDownHotspot>Carriage arrangement*</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>Declare if forwarding takes place in a block train or in a wagon group. <br />Add maximum speed with which train can run.<br />For example: normal freight train with v<sub>max</sub>. 100 km/h , special freight train with v<sub>max.</sub> 80 km.h.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#20b<MadCap:dropDownHotspot>RU executing the carriage*</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#27a <MadCap:dropDownHotspot>Consignee*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#21<MadCap:dropDownHotspot>Dispatch station*.</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#22<MadCap:dropDownHotspot>Destination station*</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#23a<MadCap:dropDownHotspot>Route requested by consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#24<MadCap:dropDownHotspot>Carriage arrangement*</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#27a<MadCap:dropDownHotspot>Consignee*</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example: ______ .</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#27b<MadCap:dropDownHotspot>Freight payer</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example: ______ . </p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#29<MadCap:dropDownHotspot>Forwarding conditions</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#29 <MadCap:dropDownHotspot>Forwarding conditions</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example: _______ .</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#25<MadCap:dropDownHotspot>Custom station</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#25 <MadCap:dropDownHotspot>Custom station</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example: ________.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#26<MadCap:dropDownHotspot>Transhipment port - harbour loading quay</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#26 <MadCap:dropDownHotspot>Transhipment port - harbour loading quay</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>For example: ________.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#30<MadCap:dropDownHotspot>Direction of travel - label O</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>Direction of travel matters in two situations. For road vehicles carried on wagons it is important to arrive at the station in the right direction of travel, so they can drive off the wagon. In such case direction of travel is described here, and label O is not used. For goods which stick out more to one side of the wagon than the other, label O is used to mark the points on the cargo which sticks out.<br />For example: Take over at the border in Arnoldstein (AT)/ Tarvisio (IT) facing forward.<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#31<MadCap:dropDownHotspot>Previous forwarding numbers</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>If you make prolongation of the permit with carriage conditions for exactly the same type of cargo and wagon set and on the same path but for the next yearly schedule, then name the previously used approval numbers for the transport. This information can be helpufll for the Infrastructure managers. <br />For example: DB Bza _____, CZ MZ______, <br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#32<MadCap:dropDownHotspot>Loading date, delivery date</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>In order to use drop-down text. Highlight the text you want to become a drop-down. Then go to the insert ribbon and select Drop-Down Text.</p>
+                <p>Loading date declare either as exact date, or refer to the calendar week, or a month when the transport is planned to begin. This information helps the infrastructure manager to better plan their work and allocate their resources. As practice shows, the delivery date is of less <br />For example: from 12.08.2024, from the 17/18 week 2024.<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
