--- a/Content/Wagon Data.htm
+++ b/Content/Wagon Data.htm
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head><title>Wagon Compatibility</title>
+    <head><title>Wagon Data</title>
     </head>
     <body>
         <h1>Wagon Data</h1>
