Renaming Pages - project structure

--- a/Content/B_Fouled Gauge/Critical Points.htm
+++ b/Content/B_Fouled Gauge/Critical Points.htm
@@ -1,10 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="131" MadCap:lastWidth="982">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Feature 2</h1>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <h1>Critical Points</h1>
+        <p>Wagon with payload or vehicle cross-sectional features that are likely to be of significance to  gauge check shall be identified as critical points. Critical points  are to be declared only where the loading gauges is fouled.<br /></p>
+        <p>&#160;</p>
     </body>
 </html>
