--- a/Content/B_Fouled Gauge/Loading Gauge.htm
+++ b/Content/B_Fouled Gauge/Loading Gauge.htm
@@ -1,10 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="4" MadCap:lastHeight="131" MadCap:lastWidth="982">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Feature 1</h1>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <h1>Loading Gauge</h1>
+        <p>Loading gauge is a concept of predefined dimensions of height and width of a wagon with cargo. <br /> is definded by the dimentions of height and width above the rail top which must not be aceeded by a rail vehicle or its load, so not to foul lineside fixtures or structured..</p>
+        <p>Information on loading gauges:</p>
+        <ul>
+            <li>and their static contours for most European countries can be found in UIC Loading Guidelines Volume 1</li>
+            <li>and access conditions referred to Exceptional Transports should be stated in the Network Statements.<br /></li>
+        </ul>
+        <p>&#160;</p>
+        <p>&#160;</p>
     </body>
 </html>
