--- a/Content/Heavy Load/Heavy Load.htm
+++ b/Content/Heavy Load/Heavy Load.htm
@@ -3,10 +3,11 @@
     <head>
     </head>
     <body>
-        <h1>Heavy</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <h1>Heavy Load</h1>
+        <p>Rail vehicles vary in terms of load limits., </p>
         <p>Exceeded route's line category</p>
         <p>Excess to load limit within carrying capacity</p>
         <p>No details on load limits</p>
+        <p>Load on bogies with more than three axles</p>
     </body>
 </html>
