--- a/Content/Heavy Load/No Details on Load Limits.htm
+++ b/Content/Heavy Load/No Details on Load Limits.htm
@@ -1,10 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="131" MadCap:lastWidth="1008">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head>
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Procedure 3</h1>
-        <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <h1>No details on Load Limits</h1>
+        <p>For special wagons with specific load tables (e.g. heavy haul wagons) no load table need to be provided.  The complete load table must be provided including the empty load row (if existent).</p>
+        <p> </p>
     </body>
 </html>
