--- a/Content/Path Data.htm
+++ b/Content/Path Data.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Path Data</h1>
-        <p>&#160;</p>
+        <p>Intro</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#20a <MadCap:dropDownHotspot>Consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
@@ -26,7 +26,7 @@
         <MadCap:dropDown>
             <MadCap:dropDownHead>#22 <MadCap:dropDownHotspot>Destination station*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Is the station where cargo is off loaded an handed over to consinee. Indicate station's name, station DIUM code and infrastructure manager's code or country code. When the last mile starts is run on the private siding add the name of the siding. For larger cities make sure to name exact station's operational name, since there may be a number of station in the city.<br />For example: Duisburg Hafen WRS [80- 22665- 4](DB InfraGO).</p>
+                <p>Is the station where cargo is off loaded an handed over to consignee. Indicate station's name, station DIUM code and infrastructure manager's code or country code. When the last mile starts is run on the private siding add the name of the siding. For cities where there are several stations at the destination, make sure to define an exact station's operational name.<br />For example: Duisburg Hafen WRS [80- 22665- 4](DB InfraGO).</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <MadCap:dropDown>
@@ -45,14 +45,14 @@
         <MadCap:dropDown>
             <MadCap:dropDownHead>#27a <MadCap:dropDownHotspot>Consignee*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example: ______ .</p>
+                <p>Consigniee is the entity to which goods are sent to be sold on commission (the buyer).  Add name and address of a consignee. When consignee data is unknown, declare consignee in a descriptive way referring to data in a waybill.<br />For example: Maersk,  in accordance with CIM.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#27b<MadCap:dropDownHotspot>Freight payer</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example: ______ . </p>
+                <p>A freight payer is an entity which signed a contract with the railway underacting for the transport of a train or a wagon group. Add name of the freight payer and add the contract number. When freight payer data is unknown, declare freight payer in a descriptive way referring to data in a waybill or leave the box empty. <br />For example: Company AB &amp; BA, contract no. ABC-11111-2423. </p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
@@ -66,14 +66,14 @@
         <MadCap:dropDown>
             <MadCap:dropDownHead>#25 <MadCap:dropDownHotspot>Custom station</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example: ________.</p>
+                <p>It is only required if customs are dealt at neither the frontier station nor the destination station,<br />For example: ________.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#26 <MadCap:dropDownHotspot>Transhipment port - harbour loading quay</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#26 <MadCap:dropDownHotspot>Transhipment port - harbor loading quay</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example: ________.</p>
+                <p>For larger ports make sure to direct the train to the right group of unloading tracks. Name the harbor loading quay where the train will be loaded or off-loaded.<br />For example: Gdansk Port Polnocny , Rudowy (ore) quay.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <p>&#160;</p>
