--- a/Content/Heavy Load/Load on Bogies With More Than Three Axles .htm
+++ b/Content/Heavy Load/Load on Bogies With More Than Three Axles .htm
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="2" MadCap:lastHeight="131" MadCap:lastWidth="1008">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
     <head><title></title>
         <meta name="template" content="Flare.htt" />
         <link href="" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1>Procedures</h1>
+        <h1>Load on Bogies With More Than Three Axles</h1>
         <p>Here is some general text for a topic. Replace this with your own content.</p>
     </body>
 </html>
