--- a/Content/Other Exceptional Consignments/Transhipment.htm
+++ b/Content/Other Exceptional Consignments/Transhipment.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>Other 3</h1>
+        <h1>Transhipment</h1>
         <p>Delete this text and replace it with your own content.</p>
     </body>
 </html>
