--- a/Content/Other Exceptional Consignments/Lack of Interoperability.htm
+++ b/Content/Other Exceptional Consignments/Lack of Interoperability.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>Rigid Loads</h1>
+        <h1>Lack of Interoperability</h1>
         <p>Delete this text and replace it with your own content.</p>
     </body>
 </html>
