--- a/Content/Other Exceptional Consignments/Other Exceptional Consignments.htm
+++ b/Content/Other Exceptional Consignments/Other Exceptional Consignments.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>Other</h1>
+        <h1>Other Exceptional Consignments</h1>
         <p>Delete this text and replace it with your own content.</p>
         <p>Rigid</p>
         <p>Flexible</p>
