--- a/Content/Exceptional Consignments/Participants.htm
+++ b/Content/Exceptional Consignments/Participants.htm
@@ -10,7 +10,7 @@
         <h3>Applicant</h3>
         <p>The party applying for organization of an exceptional consignment.</p>
         <h3>Consignee</h3>
-        <p>The organization or person who is the receiver of the shipment. <br />The consignee is named in the the consignment note, and the goods are delivered to the consignee.</p>
+        <p>The organization or person who is the receiver of the shipment. <br />The consignee is named in the  consignment note, and the goods are delivered to the consignee.</p>
         <h3>Consignor</h3>
         <p>The organization or person declared in the consignment note, who gives the forwarding papers to the transport manager.</p>
         <h3>Freight Payer</h3>
