--- a/Content/Goods Data.htm
+++ b/Content/Goods Data.htm
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd">
-    <head><title>Goods Data</title><link></link>
+    <head><title>Goods Data</title>
+        <link>
+        </link>
     </head>
     <body>
         <h1>Goods Data</h1>
@@ -81,6 +83,6 @@
                 <p>The value of the needed space is calculated as a sum of values declared in the points 16 and 17, and is presented separately for the (a) the curves with radius R = 250 m and (b) with radius R = ∞, where ∞ is defined as radius &gt; 1000 m. <br />For example: (a/b) 287 / 153 (calculation based on values binding for PKP&#160;PLK S.A infrastructure manager.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>For more information on critical points check the browser tab on fouled gauge.</p>
+        <p>For more information on critical points check the browser tab on Out-of-Gauge Loads.</p>
     </body>
 </html>
