--- a/Content/Other Exceptional Consignments/Flexible Load Units.htm
+++ b/Content/Other Exceptional Consignments/Flexible Load Units.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>Flexible Loads</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <h1>Flexible Load Units</h1>
+        <p>Flexible load units loaded on more than two wagons. For example rails which are longer than 36 meters</p>
     </body>
 </html>
