--- a/Content/Other Exceptional Consignments/Rigid Load Units.htm
+++ b/Content/Other Exceptional Consignments/Rigid Load Units.htm
@@ -3,7 +3,8 @@
     <head>
     </head>
     <body>
-        <h1>Rigid Loads</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <h1>Rigid Load Units</h1>
+        <p>Rigid load units loaded on two wagons with pivoted bolster/rotary sliding bolster, including barrier/intermediate wagons are considered exceptional consignments.</p>
+        <p>An overhanging loads may swing out further than the car body during curving. It is therefore necessary to reduce the width of the overhang to take it into account. Maximum allowed overhang is 10 m. If the load overhangs on both ends of the wagon use the larger value of the overhang.</p>
     </body>
 </html>
