--- a/Content/Other Exceptional Consignments/Transhipment.htm
+++ b/Content/Other Exceptional Consignments/Transhipment.htm
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Transhipment</h1>
-        <p>Delete this text and replace it with your own content.</p>
+        <p>&#160;</p>
+        <p>Load units to be transhipped if they weigh more than 25 t or are loaded on low-loader wagons (only applies for the transhipment to railways with different track gauges)</p>
     </body>
 </html>
