--- a/Content/Path Data.htm
+++ b/Content/Path Data.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Path Data</h1>
-        <p>Intro</p>
+        <p>P</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#20a <MadCap:dropDownHotspot>Consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
@@ -32,7 +32,7 @@
         <MadCap:dropDown>
             <MadCap:dropDownHead>#23a <MadCap:dropDownHotspot>Route requested by consignor*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example: _____. </p>
+                <p>For example: Linz (ÖBB Infra) - Berhardstahl/border crossing/ Breclav (SŽCZ) - Paskov, or Plaveč str. hr. (ŽSR) - Prešov - Košice - Čaňa str. hr/border crossing/ Hidasnémeti (MÁV Zrt)</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
         <MadCap:dropDown>
