--- a/Content/Wagon Data.htm
+++ b/Content/Wagon Data.htm
@@ -12,7 +12,14 @@
             <li>wagon sketch (if missing in wagon data sheet),</li>
             <li>wagon photo with all markings of the wagon (alternative).</li>
         </ul>
-        <p>Below are the basic parameters required for exceptional consignment permit application. They are declared with simplified examples. </p>
+        <p>Wagons and Vehicles are to be declared as a type of good when they are subject to commercial contract,  or are newly constructed and are in the tests phase. Some vehicles are  exempted from the requirement of interoperability and in international transports they run on an exceptional transport basis (for example historical vehicles).<br /></p>
+        <MadCap:dropDown>
+            <MadCap:dropDownHead>#1a<MadCap:dropDownHotspot>Wagon / vehicle type</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownBody>
+                <p>Declare  wagon construction type, series, serial numbers, specify whether empty or loaded and etc. as applicable. For vehicles state construction type, number of units (for vehicles with multiple units), respectively manufacturer's number or vehicle's <MadCap:glossaryTerm glossTerm="Glossary.Term16">EVN</MadCap:glossaryTerm>. Advise <MadCap:glossaryTerm glossTerm="Glossary.Term17">EVN status</MadCap:glossaryTerm>, whether  reserved or already assigned.  For wagon groups, or multiple vehicles declare just the first six digits of the EVN number in the point 1a and consider adding a more detailed list in the point 28 (in case of a few vehicles) or as an appendix with a separate list to the application , when several wagons are to be declared.<br />For example: newly build Tank wagon Zacns / GATX type 3500, EVN 37 84 **** ***-* (reserved).</p>
+            </MadCap:dropDownBody>
+        </MadCap:dropDown>
+        <p>The points below describe basic and crucial wagons and vehicles parameters which are required for exceptional consignment permit application. These points are declared with simplified examples. </p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#2a<MadCap:dropDownHotspot>Type of wagon*</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
@@ -76,43 +83,35 @@
         <MadCap:dropDown>
             <MadCap:dropDownHead>#10<MadCap:dropDownHotspot>Largest axle load* [t]</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>Enter a value indicated by wagon manufacturer or a calculated the actual value of load per meter. Alternatively you may declare the maximum value of load per meter associated withe line class reference values. For wagons with load grid it is sufficient to declare "normal", if allowed total weight for the line class is not exceeded.<br />For example: 20.0. normal D3.<br /></p>
+                <p>Enter a value indicated by wagon manufacturer or a calculated the actual value of load per meter. Alternatively you may declare the maximum value of load per meter associated withe line class reference values. For wagons with load grid it is sufficient to declare "normal", if allowed total weight for the line class is not exceeded.<br />For example: 20.0, normal D3.<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
+        <p>Below example references vehicles which sizes conform with the preferred route. For wagons and vehicles which do not conform with preferred route gauge, explore the chapter on Out-of-Gauge Loads.</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#19<MadCap:dropDownHotspot>Comments on critical points</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
                 <p>Declare the vehicle gauge profile with which wagon conforms. Where applicable declare the upper and lower reference profile conformity. Determine compliance with the kinematic or static gauge profile by reference to UIC leaflet 505-1 or EN 15273-2 as appropriate.<br />For Example: Wagon conforms with G1/GI1 reference profile, The wagon contour does not exceed the reference profile of the G2 kinematic gauge according to the EN standard.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>Wagon declaration in this point is required if the wagons run on their wheels as a subject to commercial contract.</p>
+        <p>Application declarations for the points 28 and 29 greatly vary  in included details because they depend on the type of railway vehicle being transported. Therefore, these two points contain summary descriptions which are sufficient to declare parameters of a wagons with the goods. For more specific prompts for filling an exceptional transport application consult XXX in Handy Information Tab. </p>
         <MadCap:dropDown>
-            <MadCap:dropDownHead>#1a<MadCap:dropDownHotspot>Wagon type</MadCap:dropDownHotspot></MadCap:dropDownHead>
+            <MadCap:dropDownHead>#28<MadCap:dropDownHotspot>Miscellaneous -remarks on railway wagons and vehicles</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example:_______.</p>
+                <p>In miscellaneous remarks declare breaks status (active / inactive), coupling and buffer status (when non-standard), wheel diameter dimension and type of suspension if these differ from the GCU and TSI regulations, minimum allowed curve radius of the wagon and other technical details of the vehicle, and operating conditions which may affect carriage conditions.<br />For example: Vehicle accompanied by manufacturer's employee, brakes switched on, smallest radius of curvature R<sub>min</sub> 150 m, wheel diameter ø 850 mm.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
-        <MadCap:dropDown>
-            <MadCap:dropDownHead>#28<MadCap:dropDownHotspot>Miscellaneous -remarks on railway wagons</MadCap:dropDownHotspot></MadCap:dropDownHead>
-            <MadCap:dropDownBody>
-                <p>For example:_______.</p>
-            </MadCap:dropDownBody>
-        </MadCap:dropDown>
-        <p>&#160;</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#29<MadCap:dropDownHotspot>Forwarding conditions</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example:_______.</p>
+                <p>The forwarding conditions remarks refer  to payload characteristic which affect how the consignment or a vehicle must be prepared for the transportation and how to examine the path so the transport may take place. For example, remarks may include information on payload earthing, on personnel with route knowledge or the knowledge of vehicle operation, on consignment / vehicle position in a train (behind locomotive, or at the end of the train). Other restrictions may include ban on wagon group separation or ban on propelling, hump shunting and passing over humps.<br />For example: include wagon at the end of the train, wagon group separation forbidden.</p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
+        <p>Point 33, is recalled for information purposes only, as it is occasionally declared in exceptional consignment applications.</p>
         <MadCap:dropDown>
             <MadCap:dropDownHead>#33<MadCap:dropDownHotspot>Inspection requirement - trust based agreement</MadCap:dropDownHotspot></MadCap:dropDownHead>
             <MadCap:dropDownBody>
-                <p>For example:_______.</p>
+                <p>In the application declare if the transport is to be a hand over or a took over in trains which are subject to trust-based agreement (ATTI). Include information where the train inspection is required and by which entity.<br />For example: yes -train is a subject to ATTI agreement, inspection conducted at station Paskov by PKP Cargo International, no - at station Petrovice an inspection is required by CD Cargo.<br /></p>
             </MadCap:dropDownBody>
         </MadCap:dropDown>
-        <p>&#160;</p>
     </body>
 </html>
