--- a/Content/Out-of-Gauge Load/Remarks to Critical Points.htm
+++ b/Content/Out-of-Gauge Load/Remarks to Critical Points.htm
@@ -6,5 +6,14 @@
     <body>
         <h1>Remarks to the Critical Points</h1>
         <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <p>&#160;</p>
+        <ol style="list-style-type: lower-alpha;">
+            <li>No fouling of the loading gauge</li>
+            <li>Connect critical points with a straight line or curve</li>
+            <li>Dimensions of payload</li>
+            <li>Centre of gravity</li>
+            <li>A loading tolerance of... mm is taken into account in the half width (12a/12b)</li>
+            <li>Peculiarities of payload (load securing)</li>
+        </ol>
     </body>
 </html>
